<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mindlinksw.schoolmeals.view.fragment.GalleryFragment.ViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:clickable="true"
        android:orientation="vertical">

        <!-- header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="13.5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:text="@string/gallery_cancel"
                android:textColor="#c8c8c8"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLength="10"
                android:maxLines="1"
                android:text="@string/gallery_title"
                android:textColor="#313131"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_submit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="13.5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:gravity="center"
                android:onClick="@{(v) -> viewModel.onClick(v)}"
                android:text="@string/gallery_submit"
                android:textColor="#c8c8c8"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#d8d8d8" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:padding="1dp"
            app:spanCount="4"
            bind:divider="@{@drawable/divider_gallery}" />
    </LinearLayout>
</layout>