<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical">

        <!-- header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13.5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ico_header_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/report_title"
                android:textColor="#313131"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13.5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_horizontal"
                android:text="@string/report_header_action"
                android:textColor="#313131"
                android:textSize="19sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#d8d8d8"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="14.3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="14.3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/report_writer"
                android:textColor="#313131"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:ellipsize="end"

                android:maxLines="1"
                android:textColor="#313131"
                android:textSize="16sp"
                tools:text="아이디아이디" />
        </LinearLayout>

        <include layout="@layout/common_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="14.3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="14.3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/report_subject"
                android:textColor="#313131"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:background="@null"

                android:maxLines="1"
                android:textColor="#313131"
                android:textSize="16sp"
                tools:text="제목제목제목제목제목제목제목" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f2f2"
            android:orientation="horizontal"
            android:paddingBottom="14.3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="14.3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/report_reason"
                android:textColor="#313131"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/iv_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="#f2f2f2"
                android:gravity="top"
                android:hint="@string/report_reason_hint"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:paddingBottom="13dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="13dp"
                android:scrollbars="vertical"
                android:textColorHint="#313131"
                android:textSize="15sp"
                tools:text="신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유신고사유" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="9.5dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ico_report_warning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3.8dp"

                android:textColor="#a6a6a6"
                android:textSize="15sp"
                tools:text="허위 신고 시 서비스 이용이 제한 될 수 있습니다." />
        </LinearLayout>
    </LinearLayout>

</layout>