<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_widget"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ico_widget_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#313131"
                android:textSize="15sp"
                tools:text="12.26(수)" />

            <TextView
                android:id="@+id/tv_meal_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center_horizontal"
                android:textColor="#ffba00"
                android:textSize="15sp"
                tools:text="점심" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="27dp"
            android:layout_height="23.5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/ico_widget_refresh" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="6.3dp"
        android:layout_marginRight="6.3dp"
        android:background="#e6e6e6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="80dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_empty_school"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f8ca25"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/ico_school_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingBottom="18dp"
                android:paddingLeft="10.2dp"
                android:paddingRight="20dp"
                android:paddingTop="18dp"
                android:text="@string/widget_empty_school"
                android:textColor="#313131"
                android:textSize="13sp"
                tools:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_data_save"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="18dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="18dp"
            android:text="@string/widget_data_save"
            android:textColor="#313131"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_power_save"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="18dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="18dp"
            android:text="@string/widget_power_save"
            android:textColor="#313131"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_meals"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="18dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="18dp"
            android:textColor="#313131"
            android:textSize="15sp"
            android:visibility="gone"
            tools:text="쇠고기버섯샤브샤브, 배추김치, 크림해물스파게티, 코다리양념구이, 우유"
            tools:visibility="visible" />

        <!-- 급식 데이터 없음 -->
        <LinearLayout
            android:id="@+id/ll_empty_meal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="27dp"
                android:src="@drawable/ico_meal_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/meal_empty"
                android:textColor="#d8d8d8"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginLeft="6.3dp"
        android:layout_marginRight="6.3dp"
        android:background="#e6e6e6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="23.5dp"
                android:src="@drawable/ico_widget_community" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:text="@string/widget_community"
                android:textColor="#313131"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="23.5dp"
                android:src="@drawable/ico_widget_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_horizontal"
                android:text="@string/widget_video"
                android:textColor="#313131"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>